@@ -253,6 +253,7 @@ int32_t ControlPhase(int32_t nframes)
 	info.fallspeed = lara_item->fallspeed;
 	info.health = lara_item->hit_points;
 	info.collidable = !!lara_item->collidable;
+	info.hair_enabled = lara.hair_enabled;
 	info.back_gun = lara.back_gun;
 	info.hit_direction = lara.hit_direction;
 	info.hit_frame = lara.hit_frame;
